Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 2.1.41
    Fixed NullPointerException errors when trying to grab PlayerProfiles for players who have not loaded
    Added new locale string Profile.PendingLoad

Version 2.1.40
    (API) mcMMO will now return null in all cases for UserManager.getPlayerProfile() if they have not been loaded yet
    (API) Roll stores exploit data in AcrobaticsManager now
    Added new locale string "Profile.Loading.FailureNotice"
    Added new locale string "Profile.Loading.FailurePlayer"
    mcMMO no longer gives up forever if a player profile fails to load and the player is still online
    mcMMO will attempt to save a profile up to 10 times now, previously it would only try one time.
    Fixed an ArrayIndexOutOfBounds error with Party Chat
    Player data for mcMMO is now loaded 3 seconds after a player connects in order to give any ongoing save tasks from other servers a small grace period to finish. This will mostly be useful to Bungee servers.

NOTES: I received reports from some users saying that saving and loading was failing could fail and not recover, I have implemented some fail safes to greatly reduce the the odds of that happening.

Version 2.1.39
    Salvaging an item should now only play the item break sound (was playing the anvil sound simultaneously before)
    Fixed bug where Tall_Grass was not giving full XP
    Added Tall_Seagrass and Seagrass to experience.yml under Herbalism (update your configs)

    NOTE: This is what your herbalism section in experience.yml should look like - https://paste.gg/p/anonymous/d5b03bd56e8442f2836f8a954d2974de
Version 2.1.38
    Roll XP cooldown down from 60 seconds to 10
    Updated pt_BR localization (thanks FabioZumbi12)
    NOTE: The XP Cooldown will be configurable in 2.2 which is nearing the finish line

Version 2.1.37